# nonprehensile_planning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  benchmark_p2p_plans.py  collect_demos_keyboard.py  demo.py  find_radius.py  generate_tetris3d.py  grasp.py  initial_pcd.npy  initial_pcd_seg.npy  inspect_data.py  pyproject.toml  run_table_bussing_sim.py  tetris_3d.py  train_object_suggester.py  train_object_suggesters.py  train_suggesters.py  visualize_pcd.py
assets/objects/: bowl.glb  cup.glb  cup.urdf  pink_bowl.urdf  plate.glb  plate.urdf  polygon.urdf  polygon_0.urdf  polygon_1.urdf  polygon_2.urdf  polygon_3.urdf  polygon_4.urdf  yellow_bowl.urdf
assets/robots/: panda_mplib.urdf
configs/: _logging.yaml  execute_real_world_plan.yaml  initial_states.yaml  mde_data_collection.yaml  p2p.yaml  table_bussing_sim.yaml  tetris3d.yaml
configs/blocks/: blocks.yaml  blocks_greedy.yaml  blocks_no_collision.yaml  blocks_no_mde.yaml  blocks_no_obj_suggester.yaml  blocks_no_probability.yaml  blocks_random_rollouts.yaml
configs/scenes/: base_scene.yaml  box_shelf.yaml  table_bussing_0.yaml  table_bussing_1.yaml  (+6 more)
scripts/: execute_real_world_plan.sh  my_train.py  plan.py  preprocess_data.py  preprocess_pcd.py  test_voronoi_env.py
visplan/: action_primitives.py  action_sampling.py  env_utils.py  generation_utils.py  motionplanner.py  robot_controller.py  shelf_packing_env.py  utils.py  voronoi_env.py
vtamp/: collision.py  demo_collection.py  evaluation.py  heuristics.py  mde.py  object_suggester.py  suggester.py  suggester_utils.py  table_bussing_states.py
(+252 files in other folders)
