[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtamp"
version = "0.1.0"
description = "A local Python package"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "trimesh",
    "shapely",
    "manifold3d",
    "triangle",
    "mapbox_earcut",
] # Add dependencies here

[tool.setuptools.packages.find]
where = ["."]
